--- a/ui/widget.ui
+++ b/ui/widget.ui
@@ -110,16 +110,6 @@
      <height>29</height>
     </rect>
    </property>
-   <item>
-    <property name="text">
-     <string>KITTI</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>NCLT</string>
-    </property>
-   </item>
   </widget>
   <widget class="QLabel" name="progressLabel">
    <property name="geometry">
@@ -134,7 +124,7 @@
     <string>TextLabel</string>
    </property>
   </widget>
-  <widget class="QSpinBox" name="jumpSpinBox">
+  <widget class="QSpinBox" name="frequencySpinBox">
    <property name="geometry">
     <rect>
      <x>1410</x>
